# 6dof_arm_ros2

./: README.md  script_build_wer24.sh  show_info.sh
diy_robot_full_cell_description/: CMakeLists.txt  Dockerfile  README.md  package.xml  run.sh
diy_robot_full_cell_description/config/: joint_limits.yaml
diy_robot_full_cell_description/urdf/: cell_model.urdf.xacro  subframe_macro.urdf.xacro
diy_robot_wer24_moveit/: Dockerfile  run.sh
diy_robot_wer24_moveit/diy_robot_wer24_moveit/: CMakeLists.txt  package.xml
diy_robot_wer24_moveit/diy_robot_wer24_moveit/launch/: complete.launch.py  robot.launch.py  test.launch.py
diy_robot_wer24_moveit/diy_robot_wer24_moveit/srdf/: robot.srdf.xacro  robot_macro.srdf.xacro
diy_robot_wer24_moveit/moveit_wrapper/: CMakeLists.txt  package.xml
diy_robot_wer24_moveit/moveit_wrapper/include/moveit_wrapper/: moveit_wrapper.h
diy_robot_wer24_moveit/moveit_wrapper/src/: moveit_wrapper.cpp
diy_robot_wer24_moveit/moveit_wrapper/srv/: SetVelocity.srv
diy_robot_wer24_moveit/py_dependencies/manipulation_tasks/: .gitignore
diy_robot_wer24_moveit/py_dependencies/manipulation_tasks/manipulation_tasks/: README.md  dataclasses.py  primitive.py  scene.py  sensor.py  task.py
diy_robot_wer24_moveit/ros_environment/: setup.cfg
diy_robot_wer24_moveit/ros_environment/launch/: joy_handler.launch.py
diy_robot_wer24_moveit/ros_environment/ros_environment/: robot.py  util.py
diy_robot_wer24_moveit/ros_environment/ros_environment/sensor/: camera.py
diy_robotarm_wer24_description/: CMakeLists.txt  Dockerfile  README.md  package.xml  run.sh
diy_robotarm_wer24_description/config/: default_kinematics.yaml  joint_limits.yaml
diy_robotarm_wer24_description/launch/: visualize.launch.py
diy_robotarm_wer24_description/log/: latest_list
diy_robotarm_wer24_description/meshes/collision/: link_2.stl  link_6.stl
diy_robotarm_wer24_description/urdf/: common.urdf.xacro  diy_robotarm.ros2_control.urdf.xacro  diy_robotarm_macro.urdf.xacro  diy_robotarm_model.urdf.xacro
diy_robotarm_wer24_driver/: README.md  package.xml
diy_robotarm_wer24_driver/include/esp32_robot_driver/: data_format.hpp  robot_connection.hpp
diy_robotarm_wer24_driver/launch/: visualize.launch.py
diy_robotarm_wer24_driver/src/: esp32_interface.cpp
diy_soft_gripper_description/: CMakeLists.txt  Dockerfile  README.md  package.xml  run.sh
diy_soft_gripper_description/urdf/: diy_gripper_macro.urdf.xacro  diy_gripper_model.urdf.xacro
diy_soft_gripper_driver/: CMakeLists.txt  README.md
diy_soft_gripper_driver/include/diy_soft_gripper_driver/: RobotConnection.hpp
diy_soft_gripper_driver/launch/: controller.launch.py  test_controller.launch.py
diy_soft_gripper_driver/src/: gripper_service_server.cpp
install/: local_setup.sh  setup.sh
install/diy_robot_wer24_moveit/share/diy_robot_wer24_moveit/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/diy_robotarm_wer24_driver/include/esp32_robot_driver/: esp32_interface.hpp
install/diy_robotarm_wer24_driver/share/diy_robotarm_wer24_driver/: esp32_interface_plugin.xml  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/diy_soft_gripper_driver/lib/diy_soft_gripper_driver/: client  server
install/diy_soft_gripper_driver/share/diy_soft_gripper_driver/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/full_cell_description/share/full_cell_description/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/manipulation_tasks/share/manipulation_tasks/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/moveit_wrapper/lib/moveit_wrapper/: moveit_wrapper_node
install/moveit_wrapper/share/moveit_wrapper/: local_setup.dsv  package.sh  package.xml
install/my_gripper_description/share/my_gripper_description/: local_setup.sh  package.dsv  package.sh  package.xml
install/my_robot_description/share/my_robot_description/: local_setup.sh  package.sh
install/my_robot_moveit/share/my_robot_moveit/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ros_environment/lib/ros_environment/: joy_handler
install/ros_environment/share/ros_environment/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/full_cell_description/: CMakeLists.txt  package.xml
src/full_cell_description/config/: joint_limits.yaml
src/full_cell_description/launch/: visualize.launch.py
src/full_cell_description/urdf/: materials.urdf.xacro  subframe_macro.urdf.xacro
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/log/: latest_build
src/my_gripper_description/: CMakeLists.txt
src/my_gripper_description/meshes/visual/: base_link.stl
src/my_gripper_description/urdf/: diy_gripper_model.urdf.xacro
src/my_gripper_driver/: Dockerfile  run.sh
src/my_gripper_driver/src/: gripper_service_test_client.cpp
src/my_robot_description/: CMakeLists.txt
src/my_robot_description/config/: default_kinematics.yaml  initial_positions.yaml
src/my_robot_description/launch/: visualize.launch.py
src/my_robot_description/meshes/collision/: link_1.stl  link_5.stl
src/my_robot_description/meshes/visual/: base.stl  link_2.stl  link_4.stl  link_5.stl
src/my_robot_description/urdf/: materials.urdf.xacro
src/my_robot_driver/: CMakeLists.txt  Dockerfile  README.md  run.sh
src/my_robot_driver/config/: esp32_controller.yaml
src/my_robot_moveit/: README.md  run.sh
src/my_robot_moveit/moveit_wrapper/: CMakeLists.txt
src/my_robot_moveit/moveit_wrapper/launch/: moveit_wrapper.launch.py
src/my_robot_moveit/moveit_wrapper/src/: moveit_wrapper.cpp  moveit_wrapper_node.cpp
src/my_robot_moveit/my_robot_moveit/: CMakeLists.txt
src/my_robot_moveit/my_robot_moveit/config/: kinematics.yaml  ompl_planning.yaml
src/my_robot_moveit/my_robot_moveit/rviz/: rviz_config.rviz
src/my_robot_moveit/my_robot_moveit/srdf/: robot.srdf.xacro
src/my_robot_moveit/ros_environment/: setup.py
(+85 files in other folders)
